# solver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Expression.cpp  Expression.hpp  ExpressionForward.hpp  Foundation.hpp  Lex.hpp  README.md  TODO.md  Visitor.cpp  Visitor.hpp  VisitorForward.hpp  main.cpp  readme.md
docs/: grammar.md
src/: CMakeLists.txt  Expression.cpp  Expression.h  Parser.cpp  Parser.h  Solver.cpp  Solver.h  combinator.h  expression.cpp  expression.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  result.h  state.cpp  state.h  token.cpp  token.h
src/backend/: expression.cpp  expression.h  monomial.cpp  monomial.h  solver.cpp  solver.h
src/combinator/: combinator.h
src/frontend/: grammar.h  lexer.cpp  lexer.h  parser.cpp  parser.h  result.h  state.cpp  state.h  token.cpp  token.h
src/parser/: combinator.h  expression.cpp  expression.h  lexer.cpp  lexer.h  parser.h  result.h  state.cpp  state.h  token.cpp
tests/: CMakeLists.txt  ParserTests.cpp  SolverTests.cpp  combinator_tests.cpp  lexer_tests.cpp  parser_tests.cpp  solver_tests.cpp
tests/fuzz/: fuzz_parser.cpp
tests/unit/: combinator_tests.cpp
